testdata/parser/negative/27.txt
Parse error at 27.pdl:6:1: Duplicate label
dupl:	while (a < 10) {
^
